--- a/fvp-unpacker-cli/Cargo.toml
+++ b/fvp-unpacker-cli/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.95"
 fvp-unpacker-core = { path = "../fvp-unpacker-core" }
 memmap2 = "0.9.5"
 rayon = "1.10.0"
